<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dim_8dp"
    android:paddingLeft="@dimen/dim_8dp"
    android:paddingRight="@dimen/dim_8dp"
    android:paddingTop="@dimen/dim_16dp" >

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_category" />
    
    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_period" />
    
    <Spinner
        android:id="@+id/spinner_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_country" />
    
    <Spinner
        android:id="@+id/spinner_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>